<?xml version="1.0"?>
<package>
  <name>json_msgs</name>
  <version>1.0.0</version>
  <description>json_msgs package</description>
  <maintainer email="gibranfp@turing.iimas.unam.mx">Gibran Fuentes Pineda</maintainer>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
